; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-interactive.c_tcp_transmit.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-interactive.c_tcp_transmit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.InteractiveData = type { i32, i32, i8* }

@TCPTRAN_DYNAMIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcp_transmit(%struct.InteractiveData* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.InteractiveData*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.InteractiveData* %0, %struct.InteractiveData** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load %struct.InteractiveData*, %struct.InteractiveData** %5, align 8
  %11 = getelementptr inbounds %struct.InteractiveData, %struct.InteractiveData* %10, i32 0, i32 2
  store i8* %9, i8** %11, align 8
  %12 = load i64, i64* %7, align 8
  %13 = trunc i64 %12 to i32
  %14 = load %struct.InteractiveData*, %struct.InteractiveData** %5, align 8
  %15 = getelementptr inbounds %struct.InteractiveData, %struct.InteractiveData* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @TCPTRAN_DYNAMIC, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %4
  %21 = load %struct.InteractiveData*, %struct.InteractiveData** %5, align 8
  %22 = getelementptr inbounds %struct.InteractiveData, %struct.InteractiveData* %21, i32 0, i32 1
  store i32 1, i32* %22, align 4
  br label %23

23:                                               ; preds = %20, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
